Please add items to this changelog that are:

 * New features.
 * Bugs that have been fixed.

Add items using the following format:

   [Name]
   * What you did 
   * If a bug (LP: #BUGNUMBER)

   For example:

   [Matt Fischer]
   * Fixed this format section (LP: #000000000)

-------------------------------------------------------------------------

Next Version Target: 0.4

   [Rafał Cieślak]
   * Added search feature (LP: #1076561)
   * Significantly improved filtering performance and responsivness (LP: #1076574)
   * Reorganised code that filters trophies, now using GtkTreeModelFilters.
   * Added support for 'keywords' fieldk (LP: #1076555)

   [Matt Fischer]
   * Fix lintian issues
   * Added a manpage (LP: #1069264)

-------------------------------------------------------------------------