@@ -23,6 +23,7 @@ Next Version Target: 0.4
    * Significantly improved filtering performance and responsivness (LP: #1076574)
    * Reorganised code that filters trophies, now using GtkTreeModelFilters.
    * Added support for 'keywords' fieldk (LP: #1076555)
+   * Fixed viewer's confusing behavior if the daemon starts for the first time since user logged in (LP: #1046430)
 
    [Matt Fischer]
    * Fix lintian issues
